--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -18,13 +18,14 @@ main:
   #   weight: 40
   - name: Publications
     url: './publication/'
-    weight: 50
+    # url: '#featured'
+    weight: 20
   # - name: Contact
   #   url: '#contact'
   #   weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+  - name: CV
+    url: uploads/resume.pdf
+    weight: 30
